[package]
name = "qgpu"
version = "0.1.0"
authors = ["noamteyssier <nb.teyssier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssh = "0.8"
futures = "0.3"
colored = "2"
clap = "2"
